--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ log = "0.4.27"
 rand_core = "0.9.3"
 serde = { version = "1.0.219", features = ["derive"]} 
 serde_json = "1.0.143"
+sys-locale = "0.3.2"
 uuid = { version = "1.18.0", features = ["v4", "serde"] }
 
 [build-dependencies]
